Fix spacing

--- a/blocks/large-content-stack/large-content-stack.css
+++ b/blocks/large-content-stack/large-content-stack.css
@@ -5,11 +5,6 @@
   background-size: cover;
   text-align: center;
 
-  p {
-    margin-block: 0;
-    margin-inline-end: var(--space-2);
-  }
-
   .media-wrapper {
     margin: var(--space-10) auto 0;
     max-inline-size: 1050px;
@@ -31,6 +26,20 @@
     font-size: var(--font-8);
   }
 
+  h2:has(+p:not(.button-container)) {
+    font-size: var(--font-4);
+  }
+
+  p:not(.button-container) {
+    margin-inline: auto;
+    inline-size: 90%;
+  }
+
+  p.button-container {
+    margin-block: 0;
+    margin-inline-end: var(--space-2);
+  }
+
   .media-wrapper > picture > img {
     display: block;
   }
@@ -39,6 +48,12 @@
     h2 {
       inline-size: 65%;
       max-inline-size: 600px;
+    }
+
+    p:not(.button-container) {
+      inline-size: 65%;
+      max-inline-size: 600px;
+      font-size: var(--font-0);
     }
   }
 }
